--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,23 @@
 [project]
-name = "interactive-story-generator"
+name = "Interactive-Story-Generator"
 version = "0.1.0"
-description = "Add your description here"
+description = "Web app for creating interactive, branching stories using AI and LangGraph."
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "bcrypt>=4.3.0",
+    "fastapi>=0.116.2",
+    "jose>=1.0.0",
+    "jwt>=1.4.0",
+    "langchain>=0.3.27",
+    "langchain-google-genai>=2.1.12",
+    "langchain-mongodb>=0.7.0",
+    "langgraph>=0.6.7",
+    "langsmith>=0.4.29",
+    "loguru>=0.7.3",
+    "passlib[bcrypt]>=1.7.4",
+    "pydantic>=2.11.9",
+    "pymongo>=4.15.1",
+    "python-dotenv>=1.1.1",
+    "uvicorn>=0.36.0",
+]
