--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "loguru>=0.7.3",
     "passlib[bcrypt]>=1.7.4",
     "pydantic>=2.11.9",
+    "pyjwt>=2.10.1",
     "pymongo>=4.15.1",
     "python-dotenv>=1.1.1",
     "uvicorn>=0.36.0",
